--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,12 @@ body {
 .status { font-variant: small-caps; padding: 3px; }
 .status.active { font-weight: bold; text-decoration: underline; }
 .status.inactive {  }
-#status .p1_cows { color: gold; border: solid 2px gold; background-color: transparent;  } 
-#status .p2_cows { color: black; border: solid 2px black; background-color: transparent; text-shadow: none; font-weight: bold; }
-#status .p1_label * { color: gold; } 
-#status .p2_label * { color: black; text-shadow: none; font-weight: bold; }
-#status .p2_label *.active { font-weight: 1000%; font-size: 1.1em;  }
-#status .p1_label *.inactive { font-size: 90%;  }
+#status .p2_cows { color: gold; border: solid 2px gold; background-color: transparent;  } 
+#status .p1_cows { color: black; border: solid 2px black; background-color: transparent; text-shadow: none; font-weight: bold; }
+#status .p2_label * { color: gold; } 
+#status .p1_label * { color: black; text-shadow: none; font-weight: bold; }
+#status .p1_label *.active { font-weight: 1000%; font-size: 1.1em;  }
+#status .p2_label *.inactive { font-size: 90%;  }
 
 
 /*.status.active:before { content: "*"; }*/
@@ -36,20 +36,12 @@ body {
 .intersection { margin-left: 1em; margin-right: 1em; position: relative; }
 #i9, #i10, #i11 { left: -2.5em; }
 #i12, #i13, #i14 { right: -2.5em; }
-#i3, #i19 { left: -4.75em; }
-#i5, #i21 { left: 4.75em; }
-#i0, #i22 { left: -9em; }
-#i2, #i24 { left: 9em; }
+#i3, #i18 { left: -4.75em; }
+#i5, #i20 { left: 4.75em; }
+#i0, #i21 { left: -9em; }
+#i2, #i23 { left: 9em; }
 
-/* TODO: Fix boardgrid SVG/css
-h1 { width: 97%; text-align: center; } 
-.game-board { position: absolute; left: 30%; top: 7em; }
-#boardgrid { position: absolute; top: 1.5em; left: 3.5em; height: 23em; width: 24em; z-index: -1; }
-#rules { position: fixed; bottom: 1em; left: 1em; }
-#rules textarea { width: 40em; height: 40em; }
-#status { position: absolute; top: -1em; left: 26%; }
-#phase { position: absolute; top: 13em; left: 44%; } 
-*/
+/* TODO: Fix boardgrid SVG/css */
 #root { width: 100%; text-align: center; }
 .game-board { width: 100%; text-align: center; }
 #boardgrid { position: absolute; margin-top: -23.75em; margin-left: -11.5em; height: 23em; width: 24em; z-index: -1; }
@@ -59,9 +51,10 @@ h1 { width: 97%; text-align: center; }
 #rules a { text-decoration: none; }
 
 .intersection[value="0"] { background-color: grey; /*opacity: 0.5;*/ }
-.intersection[value="1"] { background-color: gold; border: solid 0.5px black; }
-.intersection[value="2"] { background-color: black; border: solid 1px black; }
+.intersection[value="1"] { background-color: black; border: solid 0.5px black; }
+.intersection[value="2"] { background-color: gold; border: solid 1px black; }
 .intersection[value="0"]:hover { background-color: darkgrey; }
 .active { font-weight: bold; }
 
-
+#undo { margin-top: 0.3em; }
+#undo button { background-color: black; border: solid 1px darkblue; border-radius: 0.5em; font-weight: bold; color: red; padding-top: 3px; padding-bottom: 3px; text-variant: small-caps; }
